[gd_scene load_steps=4 format=3 uid="uid://cpc2tjh2pqcmo"]

[ext_resource type="Script" path="res://scences/UI/DragObject.gd" id="1_2l0jf"]
[ext_resource type="Texture2D" uid="uid://ksyo6a5ba1e2" path="res://icon.svg" id="2_g0yvl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqaae"]
size = Vector2(120, 120)

[node name="DragObject" type="Node2D"]
script = ExtResource("1_2l0jf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_g0yvl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sqaae")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
